refactor: lowercase enum for batter auth and ai-sdk
